load_balancing/envoy/envoy.yml
static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 50050 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: grpc_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc_cluster }
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: grpc_cluster
      type: STATIC
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}

      health_checks:
        - timeout: 1s
          interval: 3s
          unhealthy_threshold: 2
          healthy_threshold: 2
          grpc_health_check: { service_name: "" }

      load_assignment:
        cluster_name: grpc_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: [ip], port_value: 50051 }
              - endpoint:
                  address:
                    socket_address: { address: [ip], port_value: 50051 }
